site/assets/styles.css
body {
  display: grid;
  font: 20px/1.6 Arial, sans-serif;
  grid-template-columns: minmax(auto, 65ch);
  grid-template-rows: auto 1fr;
  justify-content: center;
  min-height: 100vh;
  padding: 2rem 0.25rem;
}

h1 {
  font: 600 30px/1.2 Arial, sans-serif;
  margin: 35px 0 -5px 0;
}

h2 {
  font: 600 24px/1.2 Arial, sans-serif;
  margin: 35px 0 -5px 0;
}

h3 {
  font: italic 400 18px Arial, sans-serif;
  margin-bottom: 30px;
}

h4 {
  font: 400 20px Arial, sans-serif;
}

h5 {
  font: 400 18px Arial, sans-serif;
  margin: 0 0 50px 0;
  text-align: center;
}

ul {
  margin: 10px 0;
}

li {
  margin: 5px 0;
}

a {
  color: #337AB7;
  text-decoration: none;
}

a:hover {
  color: #265b89;
  text-decoration: underline;
}

img {
  display: block;  
  margin: 50px auto 0 auto;
  max-width: 100%; 
  height: auto;
  padding: 0;
}

hr {
  background-color: #888;
  border: none; 
  height: 1px;
}

.footnotes ol {
  padding-left: 25px; 
}

header {
  align-items: center;
  display: flex;
  flex-direction: row;
  font-size: 20px;
  gap: 10px;
  justify-content: space-between;
  margin: 0 0 25px;
}

.home-link {
  color: #000;
  font-size: 28px;
  margin: 0;
}

.home-link:hover {
  text-decoration: none;
}

nav ul {
  display: flex;
  gap: 10px;
  margin: 0;
  padding: 0;
}

nav ul li {
  list-style: none;
  margin: 0;
}
nav ul li a {
  padding: 0.5rem;
}

footer {
  align-items: center;
  display: flex;
  flex-direction: column;
  font-size: 16px;
  gap: 10px;
  margin-top: 20px;
}

footer p {
  margin: 0;
}

.copyright {
  color: #555
}

.posts {
  list-style: none;
  margin-top: 20px;
  padding: 0; 
}

.posts li {
  font-size: 20px;
  margin: 5px 0;
}

@media (prefers-color-scheme: dark) {
  body, h3, header h1 {
      color: #EEE;
  }

  body {
    background-color: #111;
  }

  a, nav ul li a { 
    color: #00ACED;
  }

  a:hover, nav ul li a:hover {
    color: #32c7ff;
  }
}

@media (max-width: 450px) {
  body { 
    font: 18px/1.6 Arial, sans-serif;
  }

  header {
    align-items: center;
    display: flex;
    flex-direction: column;
    font-size: 20px;
    gap: 10px;
    justify-content: center;
    margin: 0;
  }
}

